# helloFlask

./: Dockerfile  Makefile  README.md  pyproject.toml
app/: hello.py
