[tool.poetry]
name = "helloflask"
version = "0.1.0"
description = "Hello World with Flask and Docker"
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
